# AdvProg_AY2324

./: .gitignore  README.md  c  calculus.cpp  mm.java  ss
.github/workflows/: action.yml
AdvPr/AdvPr.xcodeproj/: project.pbxproj
AdvProg_L0-Hello/: 1.txt  Makefile  README.md  Untitled-1.cpp  configure  hello.cpp  hello.h  main  main.cpp  mainTest.cpp  tempCodeRunnerFile.cpp
AdvProg_L1-GuessIt/: Makefile  README.md  configure  guessit.cpp  guessit.h  guessitTest.cpp  main.cpp
AdvProg_L2-Calculus/: Makefile  README.md  calculus.cpp  calculus.h  calculusTest.cpp  main.cpp
AdvProg_L3-HangMan/: Makefile  README.md  draw.cpp  draw.h  hangman.cpp  hangman.h  main.cpp  mainTest.cpp
AdvProg_L4-SimpleAI/: .gitignore  Makefile  Readme.md  data_processing.cpp  input_filter_mask.txt  mainTest.cpp  main_simpleai.cpp  output_filter_mask.txt  simpleai.cpp  simpleai.h  tempCodeRunnerFile.cpp  test.cpp  util.cpp  util.h
AdvProg_L5-Assessment/: .gitignore  CMakeLists.txt  Makefile  Readme.md  assessment.cpp  assessment.h  data_processing.cpp  hangman_guesser.cpp  hangman_guesser.h  main.cpp  mainTest.cpp  main_game.cpp  util.cpp  util.h
AdvProg_L5-Assessment/.github/workflows/: actions.yml  auto-approve.yml
AdvProg_L5-Assessment/data/: hangman_wordlist.txt
AdvProg_L6-Painter/: Makefile  Readme.md  main.cpp  painter.cpp  painter.h  painterTest.cpp  utils.cpp  utils.h
AdvProg_L7-Snake/: Gallery.cpp  Gallery.h  Game.cpp  Game.h  GameTest.cpp  Makefile  Position.h  README.md  SDL_utils.cpp  SDL_utils.h  Snake.cpp  Snake.h  SnakeTest.cpp  constants.h  main.cpp  make.bat
(+47 files in other folders)
